--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <meta charset='UTF-8'/>
 <meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5' name='viewport'/>
 <meta content='IE=edge' http-equiv='X-UA-Compatible'/>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <head>
-<title>Happy Birthday To You</title>
+<title>Monitoring Absen</title>
 </head>
 <body>
 <iframe src="https://docs.google.com/spreadsheets/d/1cFvE6zQKkLec7xd3im9CIrZVWztMvz_3KRgpCDqlwVk/edit?usp=sharing" height="200" width="300" title="Absen Siswa"></iframe>
 </body>
-  </html>
+</html>
